apps/infrastructure/blocky/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: blocky-ingress
  namespace: dns
  annotations:
    nginx.ingress.kubernetes.io/ssl-redirect: "true"
    nginx.ingress.kubernetes.io/backend-protocol: "HTTP"
    external-dns.alpha.kubernetes.io/hostname: blocky.home.brettswift.com
    external-dns.alpha.kubernetes.io/target: home.brettswift.com
spec:
  ingressClassName: nginx
  tls:
  - hosts:
    - home.brettswift.com
    - blocky.home.brettswift.com
    secretName: home-brettswift-com-tls
  rules:
  - host: blocky.home.brettswift.com
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: blocky
            port:
              number: 4000
